# aoc-2025

./: .gitignore  Makefile  README.md  aocd_submit_wrapper.py  done.sh  make_vars.inc  makefile.inc  new_day.sh  pyproject.toml  run_all.sh  verify.sh
2015/corporate_policy_11/: Makefile  corporate_policy.jn
2015/medicine_for_rudolph_19/: Makefile  arrays.jn  arrays_test.jn  medicine_for_rudolph.jn  strings.jn  strings_test.jn
2015/not_quite_lisp_01/: Makefile  not_quite_lisp.jn
2015/science_for_hungry_people_15/: Makefile  StringBuilder.ext.jn  science_for_hungry_people.jn
2016/dragon_checksum_16/: Makefile  dragon_checksum.jn
2017/spinlock_17/: Makefile  spinlock.jn
2018/settlers_of_the_north_pole_18/: Makefile  Map.jn  ex0.txt  settlers_of_the_north_pole.jn
2019/crossed_wires_03/: Makefile  Points.jn  crossed_wires.jn
2019/crossed_wires_3/: Input.jn  Instructions.jn  Makefile  Points.jn  crossed_wires.jn
2019/donut_maze_20/: Makefile  Portal.jn  donut_maze.jn  ex1.txt  parse.jn
2019/the_tyranny_of_the_rocket_equation_01/: Makefile  the_tyranny_of_the_rocket_equation.jn
2025/cafeteria_05/: Makefile  cafeteria.jn
2025/christmas_tree_farm_12/: Makefile  christmas_tree_farm.jn
2025/factory_10/: Factory.java  Makefile  factory.jn
2025/gift_shop_02/: Makefile  Range.jn  ex2.txt  gift_shop.jn  read.jn
2025/laboratories_07/: Makefile  laboratories.jn
util/: Graph.jn  Makefile  PQ.jn  Pt.jn  SortedMap.jn  Svg.jn  UnionFind.jn  aoc_all_2025.py  aocd.jn  get_opts.jn  graph_to_dot.jn  grid_adjacent.jn  string.jn  time.c  time.jn
(+15 files in other folders)
