[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = { }

[project]
name = "barneyb-aoc-2025"
description = "My Advent of Code 2025 solvers"
authors = [
    { name = "Barney Boisvert", email = "bboisvert@gmail.com" }
]
version = "2025.1"
requires-python = ">= 3.11"
dependencies = [
    "advent-of-code-data",
    "black",
]

[project.entry-points."barneyb_aoc_all.support"]
johann25 = "util.aoc_all_2025:support"
[project.entry-points."barneyb_aoc_all.solve"]
johann25 = "util.aoc_all_2025:solve"
